2008-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/encoded-kb.el (encoded-kbd-self-insert-utf-8):
	Catch and recover from case when the bytes we thought we were reading
	turn out to be something else entirely, such as latin-1 chars from
	quail.  See bug#396.

2008-06-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Check if the buffer has a file.
	(vc-register): Call the backend function only once, instead of
	once for each file.
	(vc-next-action): Update call to vc-register.
	(vc-dir-register): Remove function.
	(vc-dir): Bind vc-register instead of vc-dir-register.

2008-06-14  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Add net/newst-*.el.

2008-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* wdired.el (wdired-do-renames): New function.
	(wdired-finish-edit): Use it to.
	(wdired-preprocess-files): Don't hardcode (point-min) == 1.

2008-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* info.el (Info-insert-breadcrumbs): Don't break in apropos and toc.

2008-06-14  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--even-window-heights): Even window heights
	only if the selected window is higher than WINDOW.
	Reported by Stephen Berman <Stephen.Berman at gmx.net>.

2008-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* info.el (Info-insert-breadcrumbs): Be careful to preserve history.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/linux.el (terminal-init-linux): Load t-mouse.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>
	        Drew Adams  <drew.adams@oracle.com>

	* info.el (Info-breadcrumbs-depth): New var.
	(Info-insert-breadcrumbs): New function.
	(Info-fontify-node): Use it.
	(Info-mode-map): Move initialization into declaration.

2008-06-13  Ulf Jasper  <ulf.jasper@web.de>

	Rename net/newsticker-*.el to net/newst-*.el.
	* net/newst-backend.el: Rename from net/newsticker-backend.el.
	* net/newst-plainview.el: Rename from net/newsticker-plainview.el.